# cc-traffic-light

./: .gitignore  AGENTS.md  Cargo.toml  FILETREE.md  README.md  installer.iss  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  reasonix.toml
.claude/: hooks.json  settings.json
.claude/hooks/: sample-hook.ps1
.codex/: hooks.json
.reasonix/: desktop-topic-auto-title-meta.json  desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.reasonix/attachments/: clipboard-20260706-205512.805470-000001.json
archive/slint-settings/: README.md  taskbar-widget-settings.slint
crates/shared-core/: Cargo.toml
design-previews/2026-07-07-settings-redesign/: index.html
docs/: claude-code-hooks-integration.md
docs/checklist/: codex-lifecycle-hooks-validation.md  codex-notify-probe.md  end-to-end-install-monitoring-audit.md  gui-tray-v1.md  hook-adjustment-checklist.md  hook-integration-checklist.md  hook-integration-validation.md  hook-payload-sampling.md  manual-verification-results.md  material-light-groups-mvp-loop-spec.md  material-light-groups-mvp.md  p0-codex-state-write.md  p1-global-hook-install.md  p2-claude-code-hook-validation.md  p3-taskbar-traffic-light-ui.md  p4-runtime-hardening.md  post-install-monitoring-readiness.md  remaining-release-readiness-2026-07-13.md  rust-refactor-phase4-remaining.md  settings-tauri-code-cleanup.md  slint-settings-migration.md  (+10 more)
docs/plan/: README.md  (+12 more)
scripts/: assert-version-sync.ps1  clear-local-history.ps1  pack-all.ps1  rebuild-all.ps1  set-version.ps1  validate-installer-autostart.ps1
taskbar-settings-tauri/: index.html  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
taskbar-settings-tauri/src-tauri/: Cargo.toml  tauri.conf.json
taskbar-settings-tauri/src-tauri/capabilities/: default.json
taskbar-settings-tauri/src-tauri/src/: lib.rs  main.rs
taskbar-widget/: Cargo.toml  FILETREE.md  README.md  app.manifest  app.rc  build.rs  examples.claude-hooks.json  examples.codex-hooks.toml
taskbar-widget/resources/logos/: check_node.js  gen.ps1  make.ps1  make2.ps1  simple.ps1  test_ps.ps1  test_ps2.ps1
taskbar-widget/scripts/: claude-lifecycle-hook-dump.ps1  codex-lifecycle-hook-dump.ps1  codex-notify-probe-config.ps1  codex-notify-probe-wrapper.ps1  diagnose-taskbar-loop.ps1  diagnose-widget-liveness.ps1  install-claude-hooks.ps1  install-codex-hooks.ps1  validate-tauri-settings-lifecycle.ps1  validate-tauri-settings-read-model.ps1  validate-tauri-settings-snapshot-alignment.ps1
taskbar-widget/src/: agent_state.rs  app_config.rs  autostart.rs  detector.rs  hook_rules.rs  i18n.rs  lib.rs  main.rs  runtime_contract.rs  settings_bridge.rs  settings_process.rs  settings_slint.rs  settings_window.rs  taskbar.rs  tauri_settings_ipc.rs  tray_icon.rs  ui_state.rs  widget_effects.rs  widget_image.rs  widget_render.rs  win32.rs
taskbar-widget/ui/: settings.slint
taskbar-widget/ui/i18n/: en.json  zh-CN.json
(+626 files in other folders)
