[package]
name = "taskbar-widget"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
] }
