[package]
name = "taskbar-widget"
version.workspace = true
edition = "2024"
default-run = "taskbar-widget"
build = "build.rs"

[dependencies]
shared-core = { path = "../crates/shared-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_IO",
  "Win32_System_LibraryLoader",
  "Win32_System_Pipes",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
