[package]
name = "taskbar-settings-tauri"
version = "0.1.0"
edition = "2024"

[package.metadata]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "taskbar_settings_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
shared-core = { path = "../../crates/shared-core" }
tauri = { version = "2", features = [] }
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_Pipes"] }
